feat: implement idempotency and duplicate prevention for Order Service
- Add IdempotencyToken entity with tenant isolation and status tracking
- Implement IdempotencyService with token validation, duplicate detection, and rate limiting
- Create OrderNumberGenerator with collision-resistant unique order number generation
- Add request deduplication mechanisms with SHA-256 hash comparison
- Implement comprehensive exception handling for idempotency scenarios
- Update OrderController to support Idempotency-Key header
- Add database schema for idempotency_tokens table
- Create comprehensive test coverage including unit, integration, and controller tests
- Implement automatic cleanup of expired idempotency tokens
- Add proper error responses for duplicate orders and idempotency violations

Addresses requirement 6.6 for idempotency and duplicate prevention